-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0
-
None
-
qbittorrent
-
-
0cd153b26 (dev), 5da2292bf (6.4), 4b40d7070 (6.5)
Summary says it all, qbittorrent crashes while pasting using an empty keyboard, and qbittorrent bug https://github.com/qbittorrent/qBittorrent/issues/18317 said that it was a Qt bug
- is duplicated by
-
QTBUG-110322 [REG] Pressing Ctrl+V to paste in QPlainTextEdit when the clipboard is empty causes a crash
-
- Closed
-
For Gerrit Dashboard: QTBUG-110070 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
453560,4 | QWidgetTextControl: deal with empty formats list properly | dev | qt/qtbase | Status: MERGED | +2 | 0 |
454065,2 | QWidgetTextControl: deal with empty formats list properly | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
454066,2 | QWidgetTextControl: deal with empty formats list properly | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |